--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Keep track of your played matchhups in league of legends, and share them with others."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>leaguedex</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
